[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-env"
version = "0.1.0"
description = "Hugging Face Space for AI task environment using OpenEnv"
authors = [
  { name="Your Name", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "gradio",          # or "fastapi" if your app uses FastAPI
  "openenv-cli"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "data"]

[project.scripts]
server = "app:main"  # points to app.py's main function